<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:clickable="true"
    android:focusable="true"
    tools:context=".view.PickerActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:navigationIcon="@drawable/ic_back">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp">

            <TextView
                android:id="@+id/albumselection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/title_all_photos"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <FrameLayout
                android:id="@+id/dropdownframe"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/albumselection">

                <ImageView
                    android:id="@+id/dropdown"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_dropdown" />
            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="5dp"
                android:text="@string/title_done"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.example.gallerypicker.utils.scroll.FastScrollRecyclerView
        android:id="@+id/imageGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:overScrollMode="never"
        app:fastScrollPopupBackgroundSize="@dimen/_30sdp"
        app:fastScrollPopupBgColor="#2962ff"
        app:fastScrollPopupTextSize="@dimen/_12sdp"
        app:fastScrollThumbColor="#2962ff" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsrecyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="?android:attr/windowBackground"/>

    <FrameLayout
        android:id="@+id/allowAccessFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/windowBackground"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/galleryIllusTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/warning"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/galleryIllusContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/allowAccessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textview_blue_filled_ripple"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:text="@string/btn_text"
                android:textColor="?android:attr/windowBackground"
                android:textSize="16sp" />

        </LinearLayout>

    </FrameLayout>
</RelativeLayout>